--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My p5.js Sketch</title>
+  <title>Blob Game!</title>
   <link rel="icon" type="image/png" href="logo.png">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.2/p5.js"></script>
   <script src="sketch.js"></script>
