--- a/index.html
+++ b/index.html
@@ -3,8 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blob Game!</title>
+
+  <title>Blob Game! | Arena Shooter</title>
+
+  <!-- SEO -->
+  <meta name="description" content="Blob Game is a free browser arena shooter built with p5.js. Level up, fight bosses, and unlock drones in fast-paced action!">
+  <meta name="keywords" content="blob game, p5.js game, browser shooter, arena shooter, free online game, github game">
+  <meta name="author" content="Your Name">
+
+  <!-- Social sharing (Open Graph & Twitter) -->
+  <meta property="og:title" content="Blob Game! | Arena Shooter">
+  <meta property="og:description" content="Fight endless enemies, level up, and battle epic bosses in this free p5.js browser shooter.">
+  <meta property="og:image" content="https://pwhy2013.github.io/Game/logo.png">
+  <meta property="og:url" content="https://pwhy2013.github.io/Game/">
+  <meta name="twitter:card" content="summary_large_image">
+
+  <!-- Favicon -->
   <link rel="icon" type="image/png" href="logo.png">
+
+  <!-- Game scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.2/p5.js"></script>
   <script src="sketch.js"></script>
 </head>
