--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- SEO -->
   <meta name="description" content="Blob Game is a free browser arena shooter built with p5.js. Level up, fight bosses, and unlock drones in fast-paced action!">
   <meta name="keywords" content="blob game, p5.js game, browser shooter, arena shooter, free online game, github game">
-  <meta name="author" content="Your Name">
+  <meta name="Author" content="Your Name">
 
   <!-- Social sharing (Open Graph & Twitter) -->
   <meta property="og:title" content="Blob Game! | Arena Shooter">
