--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="Author" content="Your Name">
 
   <!-- Social sharing (Open Graph & Twitter) -->
-  <meta property="og:title" content="Blob Game! | Arena Shooter">
+  <meta property="og:title" content="Blobpocalypse | Arena Shooter">
   <meta property="og:description" content="Fight endless enemies, level up, and battle epic bosses in this free p5.js browser shooter.">
   <meta property="og:image" content="https://pwhy2013.github.io/Game/logo.png">
   <meta property="og:url" content="https://pwhy2013.github.io/Game/">
