--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   <title>Blob Game! | Arena Shooter</title>
 
   <!-- SEO -->
-  <meta name="description" content="Blob Game is a free browser arena shooter built with p5.js. Level up, fight bosses, and unlock drones in fast-paced action!">
-  <meta name="keywords" content="blob game, p5.js game, browser shooter, arena shooter, free online game, github game">
+  <meta name="description" content="Blobstorm is a free browser arena shooter built with p5.js. Level up, fight bosses, and unlock drones in fast-paced action!">
+  <meta name="keywords" content="Blobstorm, p5.js game, browser shooter, arena shooter, free online game, github game">
   <meta name="Author" content="Your Name">
 
   <!-- Social sharing (Open Graph & Twitter) -->
-  <meta property="og:title" content="Blobpocalypse | Arena Shooter">
+  <meta property="og:title" content="Blobstorm | Arena Shooter">
   <meta property="og:description" content="Fight endless enemies, level up, and battle epic bosses in this free p5.js browser shooter.">
-  <meta property="og:image" content="https://pwhy2013.github.io/Game/logo.png">
-  <meta property="og:url" content="https://pwhy2013.github.io/Game/">
+  <meta property="og:image" content="https://pwhy2013.github.io/Blobstorm/logo.png">
+  <meta property="og:url" content="https://pwhy2013.github.io/Blobstorm/">
   <meta name="twitter:card" content="summary_large_image">
 
   <!-- Favicon -->
