--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Blob Game! | Arena Shooter</title>
+  <title>Blobstorm! | Arena Shooter</title>
 
   <!-- SEO -->
   <meta name="description" content="Blobstorm is a free browser arena shooter built with p5.js. Level up, fight bosses, and unlock drones in fast-paced action!">
